<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="@string/Judul_Novel" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sampul"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/sampul"
                android:layout_marginStart="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textNegara"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/negaraFix"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_toEndOf="@+id/textNegara"
                        android:layout_marginStart="5dp"
                        android:id="@+id/tv_item_negara"
                        tools:text="@string/negara"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yearFix"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_item_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/textYear"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/black"
                        tools:text="2022"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/genreFix"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/tv_item_genre"
                    tools:text="@string/genre"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>